--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cyprium-syntax",
   "theme": "syntax",
   "version": "0.4.0",
-  "description": "Low-contrast theme inspired by the landscapes of Cyprus.",
+  "description": "Low contrast theme inspired by the landscapes of Cyprus.",
   "keywords": [
     "syntax",
     "light",
